// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildCp12RenderInput > 'fully populated' > appliances 1`] = `
[
  {
    "applianceInspected": "Yes",
    "applianceSafeToUse": "Yes",
    "applianceServiced": "Yes",
    "category": "boiler",
    "combustionHigh": "12ppm / 9.1% / 0.0013",
    "combustionHighCo2": "9.1",
    "combustionHighCoPpm": "12",
    "combustionHighRatio": "0.0013",
    "combustionLow": "4ppm / 4.2% / 0.0009",
    "combustionLowCo2": "4.2",
    "combustionLowCoPpm": "4",
    "combustionLowRatio": "0.0009",
    "combustionNotes": "",
    "description": "Vaillant EcoTec",
    "flueLocation": "External wall",
    "flueTerminationSatisfactory": "pass",
    "flueType": "Room sealed",
    "heatInput": "24 kW",
    "landlordAppliance": "Yes",
    "location": "Kitchen",
    "operatingPressure": "20 mbar",
    "reg26Confirmed": true,
    "remedialActionTaken": "",
    "safetyDevice": "pass",
    "spillageTest": "pass",
    "type": "Combi boiler",
    "ventilationSatisfactory": "pass",
  },
]
`;

exports[`buildCp12RenderInput > 'fully populated' > fields 1`] = `
{
  "additionalNotes": "All good",
  "certNumber": "CN-0001",
  "coAlarmFitted": "Yes",
  "coAlarmSatisfactory": "Yes",
  "coAlarmTested": "Yes",
  "companyAddressLine1": "2 Works Ln",
  "companyEmail": "hi@gas.co",
  "companyName": "Gas Co",
  "companyPhone": "0800 000",
  "companyPostcode": "",
  "companyTown": "",
  "defectsIdentified": "None",
  "emergencyControlAccessible": "Yes",
  "engineerIdNumber": "ID-9",
  "engineerName": "Alex Eng",
  "engineerSignatureText": "Alex Eng",
  "engineerSignatureUrl": "sig/abc.png",
  "engineerVisitTime": "2026-07-01",
  "equipotentialBondingSatisfactory": "pass",
  "gasSafeRegistrationNumber": "123456",
  "gasTightnessSatisfactory": "pass",
  "issueDate": "2026-07-01",
  "landlordAddressLine1": "1 Test St",
  "landlordAddressLine2": "Flat 2",
  "landlordCompany": "Lettings Ltd",
  "landlordName": "A Landlord",
  "landlordPostcode": "E1 6AN",
  "landlordTel": "020 7946 1234",
  "landlordTown": "London",
  "nextInspectionDue": "2027-07-01",
  "pipeworkVisualSatisfactory": "pass",
  "propertyAddressLine1": "9 Property Rd",
  "propertyAddressLine2": "",
  "propertyAddressName": "The Gables",
  "propertyPostcode": "SE1 9SG",
  "propertyTel": "07700 900000",
  "propertyTown": "London",
  "remedialWorksRequired": "None",
  "responsiblePersonAcknowledgementDate": "2026-07-01",
  "responsiblePersonName": "A Landlord",
  "responsiblePersonSignatureText": "A Landlord",
  "responsiblePersonSignatureUrl": "sig/cust.png",
  "warningNoticeIssued": "No",
}
`;

exports[`buildCp12RenderInput > 'non-boiler categories' > appliances 1`] = `
[
  {
    "applianceInspected": "Yes",
    "applianceSafeToUse": "Yes",
    "applianceServiced": "Yes",
    "category": "gas_fire",
    "combustionHigh": "12ppm / 9.1% / 0.0013",
    "combustionHighCo2": "9.1",
    "combustionHighCoPpm": "12",
    "combustionHighRatio": "0.0013",
    "combustionLow": "4ppm / 4.2% / 0.0009",
    "combustionLowCo2": "4.2",
    "combustionLowCoPpm": "4",
    "combustionLowRatio": "0.0009",
    "combustionNotes": "",
    "description": "Gas Fire",
    "flueLocation": "External wall",
    "flueTerminationSatisfactory": "pass",
    "flueType": "Room sealed",
    "heatInput": "24 kW",
    "landlordAppliance": "Yes",
    "location": "Kitchen",
    "operatingPressure": "20 mbar",
    "reg26Confirmed": true,
    "remedialActionTaken": "",
    "safetyDevice": "pass",
    "spillageTest": "pass",
    "type": "Gas Fire",
    "ventilationSatisfactory": "pass",
  },
  {
    "applianceInspected": "Yes",
    "applianceSafeToUse": "Yes",
    "applianceServiced": "Yes",
    "category": "water_heater",
    "combustionHigh": "12ppm / 9.1% / 0.0013",
    "combustionHighCo2": "9.1",
    "combustionHighCoPpm": "12",
    "combustionHighRatio": "0.0013",
    "combustionLow": "4ppm / 4.2% / 0.0009",
    "combustionLowCo2": "4.2",
    "combustionLowCoPpm": "4",
    "combustionLowRatio": "0.0009",
    "combustionNotes": "",
    "description": "Water Heater",
    "flueLocation": "External wall",
    "flueTerminationSatisfactory": "pass",
    "flueType": "Room sealed",
    "heatInput": "24 kW",
    "landlordAppliance": "Yes",
    "location": "Kitchen",
    "operatingPressure": "20 mbar",
    "reg26Confirmed": true,
    "remedialActionTaken": "",
    "safetyDevice": "pass",
    "spillageTest": "pass",
    "type": "Water Heater",
    "ventilationSatisfactory": "pass",
  },
  {
    "applianceInspected": "Yes",
    "applianceSafeToUse": "Yes",
    "applianceServiced": "Yes",
    "category": "other",
    "combustionHigh": "12ppm / 9.1% / 0.0013",
    "combustionHighCo2": "9.1",
    "combustionHighCoPpm": "12",
    "combustionHighRatio": "0.0013",
    "combustionLow": "4ppm / 4.2% / 0.0009",
    "combustionLowCo2": "4.2",
    "combustionLowCoPpm": "4",
    "combustionLowRatio": "0.0009",
    "combustionNotes": "",
    "description": "Other",
    "flueLocation": "External wall",
    "flueTerminationSatisfactory": "pass",
    "flueType": "Room sealed",
    "heatInput": "24 kW",
    "landlordAppliance": "Yes",
    "location": "Kitchen",
    "operatingPressure": "20 mbar",
    "reg26Confirmed": true,
    "remedialActionTaken": "",
    "safetyDevice": "pass",
    "spillageTest": "pass",
    "type": "Other",
    "ventilationSatisfactory": "pass",
  },
]
`;

exports[`buildCp12RenderInput > 'non-boiler categories' > fields 1`] = `
{
  "additionalNotes": "",
  "certNumber": "CN-0004",
  "coAlarmFitted": "",
  "coAlarmSatisfactory": "",
  "coAlarmTested": "",
  "companyAddressLine1": "",
  "companyEmail": "",
  "companyName": "",
  "companyPhone": "",
  "companyPostcode": "",
  "companyTown": "",
  "defectsIdentified": "",
  "emergencyControlAccessible": "",
  "engineerIdNumber": "",
  "engineerName": "",
  "engineerSignatureText": "",
  "engineerSignatureUrl": "",
  "engineerVisitTime": "",
  "equipotentialBondingSatisfactory": "",
  "gasSafeRegistrationNumber": "",
  "gasTightnessSatisfactory": "",
  "issueDate": "2026-07-04",
  "landlordAddressLine1": "",
  "landlordAddressLine2": "",
  "landlordCompany": "",
  "landlordName": "",
  "landlordPostcode": "",
  "landlordTel": "",
  "landlordTown": "",
  "nextInspectionDue": "",
  "pipeworkVisualSatisfactory": "",
  "propertyAddressLine1": "12 Legacy Rd",
  "propertyAddressLine2": "Hull",
  "propertyAddressName": "",
  "propertyPostcode": "",
  "propertyTel": "",
  "propertyTown": "HU1 1AA",
  "remedialWorksRequired": "",
  "responsiblePersonAcknowledgementDate": "",
  "responsiblePersonName": "",
  "responsiblePersonSignatureText": "",
  "responsiblePersonSignatureUrl": "",
  "warningNoticeIssued": "",
}
`;

exports[`buildCp12RenderInput > 'sparse — relies on address splitting …' > appliances 1`] = `
[
  {
    "applianceInspected": "Yes",
    "applianceSafeToUse": "Yes",
    "applianceServiced": "Yes",
    "category": "boiler",
    "combustionHigh": "12ppm / 9.1% / 0.0013",
    "combustionHighCo2": "9.1",
    "combustionHighCoPpm": "12",
    "combustionHighRatio": "0.0013",
    "combustionLow": "4ppm / 4.2% / 0.0009",
    "combustionLowCo2": "4.2",
    "combustionLowCoPpm": "4",
    "combustionLowRatio": "0.0009",
    "combustionNotes": "",
    "description": "Combi boiler",
    "flueLocation": "External wall",
    "flueTerminationSatisfactory": "pass",
    "flueType": "Room sealed",
    "heatInput": "24 kW",
    "landlordAppliance": "Yes",
    "location": "Kitchen",
    "operatingPressure": "20 mbar",
    "reg26Confirmed": true,
    "remedialActionTaken": "",
    "safetyDevice": "pass",
    "spillageTest": "pass",
    "type": "Combi boiler",
    "ventilationSatisfactory": "pass",
  },
]
`;

exports[`buildCp12RenderInput > 'sparse — relies on address splitting …' > fields 1`] = `
{
  "additionalNotes": "",
  "certNumber": "CN-0002",
  "coAlarmFitted": "",
  "coAlarmSatisfactory": "",
  "coAlarmTested": "",
  "companyAddressLine1": "",
  "companyEmail": "",
  "companyName": "",
  "companyPhone": "",
  "companyPostcode": "",
  "companyTown": "",
  "defectsIdentified": "",
  "emergencyControlAccessible": "",
  "engineerIdNumber": "",
  "engineerName": "",
  "engineerSignatureText": "",
  "engineerSignatureUrl": "",
  "engineerVisitTime": "",
  "equipotentialBondingSatisfactory": "",
  "gasSafeRegistrationNumber": "",
  "gasTightnessSatisfactory": "",
  "issueDate": "2026-07-02",
  "landlordAddressLine1": "5 Fallback Way",
  "landlordAddressLine2": "Leeds",
  "landlordCompany": "Fallback Co",
  "landlordName": "Fallback Landlord",
  "landlordPostcode": "",
  "landlordTel": "",
  "landlordTown": "LS1 4AP",
  "nextInspectionDue": "",
  "pipeworkVisualSatisfactory": "",
  "propertyAddressLine1": "77 Other St",
  "propertyAddressLine2": "Leeds",
  "propertyAddressName": "",
  "propertyPostcode": "LS2 8JS",
  "propertyTel": "",
  "propertyTown": "LS2 8JS",
  "remedialWorksRequired": "",
  "responsiblePersonAcknowledgementDate": "",
  "responsiblePersonName": "Fallback Landlord",
  "responsiblePersonSignatureText": "Fallback Landlord",
  "responsiblePersonSignatureUrl": "",
  "warningNoticeIssued": "",
}
`;

exports[`buildCp12RenderInput > 'unsafe appliance — composed defect/re…' > appliances 1`] = `
[
  {
    "applianceInspected": "Yes",
    "applianceSafeToUse": "No",
    "applianceServiced": "Yes",
    "category": "boiler",
    "combustionHigh": "12ppm / 9.1% / 0.0013",
    "combustionHighCo2": "9.1",
    "combustionHighCoPpm": "12",
    "combustionHighRatio": "0.0013",
    "combustionLow": "4ppm / 4.2% / 0.0009",
    "combustionLowCo2": "4.2",
    "combustionLowCoPpm": "4",
    "combustionLowRatio": "0.0009",
    "combustionNotes": "",
    "description": "Vaillant EcoTec",
    "flueLocation": "External wall",
    "flueTerminationSatisfactory": "fail",
    "flueType": "Room sealed",
    "heatInput": "24 kW",
    "landlordAppliance": "Yes",
    "location": "Kitchen",
    "operatingPressure": "20 mbar",
    "reg26Confirmed": true,
    "remedialActionTaken": "Class: Immediately Dangerous; Defect: Cracked heat exchanger; Warning notice: Yes; Action: Capped and labelled",
    "safetyDevice": "pass",
    "spillageTest": "pass",
    "type": "Combi boiler",
    "ventilationSatisfactory": "pass",
  },
  {
    "applianceInspected": "Yes",
    "applianceSafeToUse": "No",
    "applianceServiced": "Yes",
    "category": "hob_cooker",
    "combustionHigh": "12ppm / 9.1% / 0.0013",
    "combustionHighCo2": "9.1",
    "combustionHighCoPpm": "12",
    "combustionHighRatio": "0.0013",
    "combustionLow": "4ppm / 4.2% / 0.0009",
    "combustionLowCo2": "4.2",
    "combustionLowCoPpm": "4",
    "combustionLowRatio": "0.0009",
    "combustionNotes": "",
    "description": "Bosch Hob",
    "flueLocation": "External wall",
    "flueTerminationSatisfactory": "pass",
    "flueType": "Room sealed",
    "heatInput": "24 kW",
    "landlordAppliance": "Yes",
    "location": "Kitchen",
    "operatingPressure": "20 mbar",
    "reg26Confirmed": true,
    "remedialActionTaken": "Class: At Risk; Warning notice: No",
    "safetyDevice": "pass",
    "spillageTest": "pass",
    "type": "Gas Hob/Cooker",
    "ventilationSatisfactory": "pass",
  },
]
`;

exports[`buildCp12RenderInput > 'unsafe appliance — composed defect/re…' > fields 1`] = `
{
  "additionalNotes": "",
  "certNumber": "CN-0003",
  "coAlarmFitted": "",
  "coAlarmSatisfactory": "",
  "coAlarmTested": "",
  "companyAddressLine1": "",
  "companyEmail": "",
  "companyName": "",
  "companyPhone": "",
  "companyPostcode": "",
  "companyTown": "",
  "defectsIdentified": "Appliance 1 (Kitchen): Cracked heat exchanger
Appliance 2 (Kitchen): Failed: Cooker stability",
  "emergencyControlAccessible": "",
  "engineerIdNumber": "",
  "engineerName": "",
  "engineerSignatureText": "",
  "engineerSignatureUrl": "",
  "engineerVisitTime": "",
  "equipotentialBondingSatisfactory": "",
  "gasSafeRegistrationNumber": "",
  "gasTightnessSatisfactory": "",
  "issueDate": "2026-07-03",
  "landlordAddressLine1": "",
  "landlordAddressLine2": "",
  "landlordCompany": "",
  "landlordName": "C",
  "landlordPostcode": "",
  "landlordTel": "",
  "landlordTown": "",
  "nextInspectionDue": "",
  "pipeworkVisualSatisfactory": "",
  "propertyAddressLine1": "",
  "propertyAddressLine2": "",
  "propertyAddressName": "",
  "propertyPostcode": "",
  "propertyTel": "",
  "propertyTown": "",
  "remedialWorksRequired": "Appliance 1 (Kitchen): Capped and labelled
Appliance 2 (Kitchen): Fit stability bracket",
  "responsiblePersonAcknowledgementDate": "",
  "responsiblePersonName": "C",
  "responsiblePersonSignatureText": "C",
  "responsiblePersonSignatureUrl": "",
  "warningNoticeIssued": "",
}
`;
